fix email address label overlap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -597,3 +597,7 @@ hr {
     margin-left: 20px;
   }
 }
+
+#rate_alert {
+  padding: 50px;
+}
